margin/wording tweak

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
         <li class="message cornered full">
         <p>
         MultiplayerSet is a game in which you try to find <b>sets</b> of three cards
-        out of twelve cards. Which cards form sets has to do with the <b>four traits</b>
+        out of twelve cards. Which cards form sets depends on the <b>four traits</b>
         that each card has:
         </p>
         <ul>
