--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="description" content="Play the card game Set online with your friends in realtime"/>
+    <meta name="description" content="Intellectual card game online with your friends in realtime"/>
     <title>MultiplayerSet - realtime online card game</title>
     <link rel="stylesheet" href="/style.css"/>
     <link rel="shortcut icon" href="/favicon.ico"/>
@@ -16,8 +16,8 @@
         <li class="message cornered full">
         <p>
         MultiplayerSet is a game in which you try to find <b>sets</b> of three cards
-        out of twelve cards. Which cards form sets depends on the <b>four traits</b>
-        that each card has:
+        out of a board of twelve cards. Which cards form sets depends on the <b>four
+        traits</b> that each card has:
         </p>
         <ul>
           <li><b>Shape</b>: oval, diamond, or squiggle</li>
