--- a/client/game.html
+++ b/client/game.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="description" content="Play the card game Set online with your friends in realtime"/>
+    <meta name="description" content="Intellectual card game online with your friends in realtime"/>
     <title>MultiplayerSet - realtime online card game</title>
     <link rel="stylesheet" href="/style.css"/>
     <link rel="shortcut icon" href="/favicon.ico"/>
