open source attributions

--- a/client/about.html
+++ b/client/about.html
@@ -13,18 +13,32 @@
     </div>
     <div id="wrap">
       <ul id="explanation">
-        <li><h2>About</h2></li>
-        <li class="message cornered full">
+        <li class="message cornered">
+          <div class="sidebar">
+            <p>MultiplayerSet exists thanks to the following open source projects:</p>
+            <ul>
+              <li><a href="http://headjs.com/">headJS</a>, by Tero Piirainen</li>
+              <li><a href="http://jquery.com">jQuery</a>, by John Resig</li>
+              <li><a href="http://benalman.com/projects/jquery-bbq-plugin/">jQuery BBQ</a>, by "Cowboy" Ben Alman</li>
+              <li><a href="https://github.com/louisremi/jquery.transform.js">jquery.transform.js</a>, Louis-Rémi Babé</li>
+              <li><a href="https://github.com/douglascrockford/JSON-js">JSON-js</a>, by Douglas Crockford</li>
+              <li><a href="https://developer.mozilla.org">Mozilla Developer Center</a></li>
+              <li><a href="http://nodejs.org">nodeJS</a>, by Ryan Dahl</li>
+              <li><a href="http://socket.io/">Socket.IO</a>, by Guillermo Rauch</li>
+            </ul>
+          </div>
           <p>
           MultiplayerSet is a realtime multiplayer game written in <a href="http://nodejs.org/">nodeJS</a> on
           the server and <a href="http://jquery.com/">jQuery</a> on the client.
           </p>
           <ul>
           <li>
-            <a href="http://vincentwoo.com">Vincent Woo</a> is a programmer working for Google. He currently lives in the bay area. He did all the computery stuff.
+            <a href="http://vincentwoo.com">Vincent Woo</a> is a programmer working for Google.
+            He did all the computery stuff.
           </li>
           <li>
-            <a href="http://tiffanyenriquez.com">Tiffany Enriquez</a> is a designer who currently works at eBay. She did the graphics and layouting.
+            <a href="http://tiffanyenriquez.com">Tiffany Enriquez</a> is a designer who works at eBay.
+            She did the graphics and layouting.
           </li>
           </ul>
         </li>
