tweak positioning, landinage page wording

--- a/client/about.html
+++ b/client/about.html
@@ -14,7 +14,7 @@
     <div id="wrap">
       <ul id="explanation">
         <li class="message cornered">
-          <div class="sidebar">
+          <div class="sidebar sidecol">
             <p>MultiplayerSet exists thanks to the following open source projects:</p>
             <ul>
               <li><a href="http://headjs.com/">headJS</a>, by Tero Piirainen</li>
@@ -52,6 +52,9 @@
         <li>
           <a class="button" href="/game/public/"><h2>Join a public game</h2></a>
         </li>
+        <li>
+          <a class="button spaced" href="/"><h2>Home</h2></a>
+        </li>
         <li class="message cornered" id="display_ad">
           <script>
           google_ad_client = "ca-pub-6528147086648678";
@@ -61,9 +64,6 @@
           google_ad_height = 250;
           </script>
           <script src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
-        </li>
-        <li>
-          <a class="button" href="/"><h2>Home</h2></a>
         </li>
       </ul>
     </div></div>
