--- a/client/index.html
+++ b/client/index.html
@@ -96,22 +96,20 @@
         </p>
         <div class="clear"></div>
         </li>
-        <li><h2>How to play</h2></li>
+        <li><h2>Starting a game</h2></li>
         <li class="message cornered full">
         <p>
         If you want to play with friends, hit <b>start a private game</b> in the top
-        left of this page. You will receive a link you can use to invite other people
-        to join.
+        left corner. You can use the URL of your game room to invite your friends.
         </p>
         <p>
         If you want to get into a game quickly, hit <b>join a public game</b>. You will
-        be placed into a game that will start as soon as three people are present. You
-        can still invite your friends to join a public game in the same way.
+        be placed into a game that will start as soon as three people are present. While
+        the room fills up, you can warm up in an unscored practice game.
         </p>
         <p>
-        Once in a game, click cards to build sets. Click on any part of the board to
-        clear your current selection. Type messages and hit enter to talk to the
-        other players in the game.
+        Click cards to build sets. To clear your current selection, click on any part
+        of the board. Type messages and hit enter to talk to the other players.
         </p>
         <h3>Hints</h3>
         <p>
@@ -131,6 +129,9 @@
         <li>
           <a class="button" href="/game/public/"><h2>Join a public game</h2></a>
         </li>
+        <li>
+          <a class="button spaced" href="/about/"><h2>About</h2></a>
+        </li>
         <li class="message cornered" id="display_ad">
           <script>
           google_ad_client = "ca-pub-6528147086648678";
@@ -140,9 +141,6 @@
           google_ad_height = 250;
           </script>
           <script src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
-        </li>
-        <li>
-          <a class="button" href="/about/"><h2>About</h2></a>
         </li>
       </ul>
     </div></div>
