--- a/client/about.html
+++ b/client/about.html
@@ -41,6 +41,7 @@
             She did the graphics and layouting.
           </li>
           </ul>
+          <p>For all inquiries, please <a href="mailto:me@vincentwoo.com">email Vincent</a>.</p>
         </li>
       </ul>
     </div>
