new social links draft

--- a/client/game.html
+++ b/client/game.html
@@ -11,10 +11,6 @@
     <div id="header">
       <h1>
         <a href="/">Multiplayer<span class="grey">Set</span></a>
-        <span class="social">
-          <g:plusone href="http://multiplayerset.com"></g:plusone>
-          <a href="http://twitter.com/share" class="twitter-share-button" data-url="http://multiplayerset.com" data-count="horizontal" data-via="tffny"></a>
-        </span>
       </h1>
     </div>
     <div id="fixwrap"><div id="fixinner">
@@ -87,6 +83,12 @@
           <li id ="share" class="message cornered">
             Share this URL to invite other people to join this game:
             <input type="text"></input>
+          </li>
+          <li class="spaced message cornered">
+            <div class="social">
+              <g:plusone size="medium" href="http://multiplayerset.com"></g:plusone>
+              <a href="http://twitter.com/share" class="twitter-share-button" data-url="http://multiplayerset.com" data-count="horizontal" data-via="tffny"></a>
+            </div>
           </li>
         </ul>
       </div>
