--- a/client/about.html
+++ b/client/about.html
@@ -11,10 +11,6 @@
     <div id="header">
       <h1>
         <a href="/">Multiplayer<span class="grey">Set</span></a>
-        <span class="social">
-          <g:plusone href="http://multiplayerset.com"></g:plusone>
-          <a href="http://twitter.com/share" class="twitter-share-button" data-url="http://multiplayerset.com" data-count="horizontal" data-via="tffny"></a>
-        </span>
       </h1>
     </div>
     <div id="wrap">
@@ -63,6 +59,12 @@
         </li>
         <li>
           <a class="button spaced" href="/"><h2>Home</h2></a>
+        </li>
+        <li class="spaced message cornered">
+          <div class="social">
+            <g:plusone size="medium" href="http://multiplayerset.com"></g:plusone>
+            <a href="http://twitter.com/share" class="twitter-share-button" data-url="http://multiplayerset.com" data-count="horizontal" data-via="tffny"></a>
+          </div>
         </li>
         <li class="message cornered" id="display_ad">
           <script>
