next social draft

--- a/client/game.html
+++ b/client/game.html
@@ -69,7 +69,7 @@
       <div id="boardwrap">
       <div id="announcement" class="loading">
         <h1>Connecting</h1>
-        Please hold while we retreive your game
+        Please hold while we retrieve your game
       </div>
         <table id="board"></table>
         <ul>
@@ -83,12 +83,6 @@
           <li id ="share" class="message cornered">
             Share this URL to invite other people to join this game:
             <input type="text"></input>
-          </li>
-          <li class="spaced message cornered">
-            <div class="social">
-              <g:plusone size="medium" href="http://multiplayerset.com"></g:plusone>
-              <a href="http://twitter.com/share" class="twitter-share-button" data-url="http://multiplayerset.com" data-count="horizontal" data-via="tffny"></a>
-            </div>
           </li>
         </ul>
       </div>
@@ -127,8 +121,6 @@
       head.js ('http://www.google-analytics.com/ga.js', function () {
         _gat._getTracker('UA-267782-3')._trackPageview();
       });
-      head.js('http://apis.google.com/js/plusone.js');
-      head.js('http://platform.twitter.com/widgets.js');
     </script>
   </body>
 </html>
