client.js on about page.

--- a/client/about.html
+++ b/client/about.html
@@ -83,6 +83,8 @@
     </div></div>
     <script src="/load.js"></script>
     <script>
+      head.js('http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js'
+      , '/client.js');
       head.js('http://www.google-analytics.com/ga.js', function () {
         _gat._getTracker('UA-267782-3')._trackPageview();
       });
