--- a/client/index.html
+++ b/client/index.html
@@ -136,7 +136,7 @@
         </li>
         <li class="spaced message cornered">
           <div class="social">
-            <h3 style="margin: 8px 0">Social tomfoolery:</h3>
+            <h3 style="margin: 8px 0">Social tomfoolery</h3>
             <g:plusone size="medium" href="http://multiplayerset.com"></g:plusone>
             <a href="http://twitter.com/share" class="twitter-share-button" data-url="http://multiplayerset.com" data-count="horizontal" data-via="tffny"></a>
             <a href="http://www.reddit.com/submit" onclick="window.location = 'http://www.reddit.com/submit?url=' + encodeURIComponent(\'http://multiplayerset.com\'); return false" style="margin-top: -5px"> <img src="http://www.reddit.com/static/spreddit7.gif" alt="submit to reddit" border="0" /> </a>
