+1 https redirect skip

--- a/client/index.html
+++ b/client/index.html
@@ -155,7 +155,7 @@
       head.js('http://www.google-analytics.com/ga.js', function () {
         _gat._getTracker('UA-267782-3')._trackPageview();
       });
-      head.js('http://apis.google.com/js/plusone.js');
+      head.js('https://apis.google.com/js/plusone.js');
       head.js('http://platform.twitter.com/widgets.js');
     </script>
   </body>
