change caching add help

--- a/client/game.html
+++ b/client/game.html
@@ -97,6 +97,12 @@
     </div>
     <div id="footer">
       <form>
+        <div style="position: absolute; left: 215px; top: 10px;">
+          Did you forget the <a href=""
+            onclick="window.open('/help', 'help',
+                      'menubar=0,status=0,scrollbars=1,toolbar=0,menubar=0,resizeable=1,width=680,height=600'); return false;">
+          rules</a>?
+        </div>
         <h3></h3><label for="input">Type here to chat</label>
         <textarea wrap="hard" autocomplete="off" spellcheck="false" id="input"></textarea>
       </form>
