--- a/client/game.html
+++ b/client/game.html
@@ -110,6 +110,7 @@
     <script src="/load.js"></script>
     <script>
       head.js('http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js'
+      , '/socket.io/socket.io.js'
       , '/client.js'
       , function() {
         $(startGame);
